<resources>
    <string name="app_name">RecyclerViewPractice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="also_known">別名</string>
    <string name="brief">簡介</string>
    <string name="method">方式</string>
    <string name="features">功能</string>
    <string name="final_time">最後更新</string>
    <string name="page_button">網頁</string>
    <string name="back">back</string>
    <string name="toolbar_title">title</string>


</resources>